# Sqlfluff-testing

./: .sqlfluff  setup.py  tables.sql
.github/workflows/: ci-cd.yaml
Sql-fluff/sqlfluff_plugin_iceberg/: __init__.py  iceberg_grammar.py
sql/: iceberg.sql  test.sql
sqlfiles/: table.sql
sqlfluff-plugin-iceberg/: pyproject.toml  setup.cfg  setup.py
sqlfluff-plugin-iceberg/sqlfluff_plugin_iceberg/: __init__.py  dialect.py  iceberg_grammar.py  plugin.py
sqlfuff-plugin-iceberg/: setup.cfg  setup.py
