[metadata]
name = sqlfluff-plugin-iceberg
version = 0.1.0
description = SQLFluff plugin to support CREATE ICEBERG TABLE
author = Your Name
license = MIT

[options]
packages = find:
install_requires =
    sqlfluff >=2.0.0

[options.entry_points]
sqlfluff.plugin =
    iceberg = sqlfluff_plugin_iceberg.plugin
