[metadata]
name = sqlfluff-plugin-iceberg
version = 0.1.0
description = SQLFluff plugin to support CREATE ICEBERG TABLE
license = MIT

[options]
packages = find:
install_requires =
    sqlfluff >=2.0.0

[options.packages.find]
where = sqlfluff-plugin-iceberg

[options.entry_points]
sqlfluff.plugin =
    iceberg = sqlfluff_plugin_iceberg.plugin
